--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 	 <div id="slide3" class="slide">
 	  <div class="title">
 	    <h1>Algumas informações</h1>
-		<p>Nome: Isabela Silva.</p>
+		<p>Nome: Isabela Pereira Silva.</p>
 		<p>Data de nascimento: 18/02/2005.</p>
 		<p>Religião: Evangélica.</p>
 		<p>Minha comida favorita: hot dog.</p>
@@ -178,7 +178,7 @@
 	 </div>
 
 	 <div id="slide4" class="slide header">
-	    <h1>Por enquanto é isto</h1>
+		 <h1>Por enquanto é isto</h1>
 	 </div>
    </body>
   </html>
