--- a/index.html
+++ b/index.html
@@ -147,7 +147,8 @@
 	  <div id="slide1" class="slide">
         <div class="title">
     		  <h1>Olá Gente, tudo bem com vocês?</h1>
-    		  <p>Nesse site eu vou  me apresentar e  contar um pouco sobre mim.</p>
+    		  <p>Nesse site eu vou  me apresentar e  contar um pouco sobre mim.Sobre o que eu gosto e a minha história </p>
+		  <hr />
     		  <p>~Espero que gostem!</p>
 	      </div>
 	  </div>
@@ -158,27 +159,45 @@
 		<p>Eu sou a isabela, tenho 15 anos e moro em Hortolândia.</p>
 		<p>Na verdade eu nasci em Sumaré, morei lá até os meus 7 aninhos e depois me mudei para cá.</p>
 		<p>Moro com os meus pais e tenho um irmão </p>
-		<p>Estudo no Intituto Federal e estou cursando técnico de informática</p>
+		<p>Estudo no  <acronym title="Instituto Federal de Educação, Ciência e Tecnologia de São Paulo"> IFSP </acronym> e estou cursando técnico de informática</p>
 
 	  </div>
-	    <img class="img1" src="isabela.jpg"  />
-	    <img class="img2" src="isabela3.jpg"  />
+	    <img class="img1" src="isabela.jpg" alt="É uma foto da autora do site, meio corpo, ela de lado e sorrindo." />
+	    <img class="img2" src="isabela3.jpg" alt="É uma foto  da autora do site, é uma selfie e ela está sorrindo."   />
 	 </div>
 
 	 <div id="slide3" class="slide">
 	  <div class="title">
-	    <h1>Algumas informações</h1>
-		<p>Nome: Isabela Pereira Silva.</p>
-		<p>Data de nascimento: 18/02/2005.</p>
-		<p>Religião: Evangélica.</p>
-		<p>Minha comida favorita: hot dog.</p>
-		<p>Estou no primeiro ano do ensino Médio.</p>
-
+             <table>
+		    <tr>
+			    <th>Algumas Informações</th>		
+            </tr>
+            <tr>
+			    <td>Nome: Isabela Silva.</td>
+			</tr>
+			<tr>
+				<td>Data de Nascimento:18/02/2005.</td>
+		    </tr>
+			<tr>
+				<td>Religião: Cristã </td>
+			</tr>
+			<tr>
+				<td>Minha comida favorita: hot dog.</td>
+			</tr>
+			<tr>
+				<td>Estou no primeiro ano do ensino Médio</td>
+            </tr>			
+	</table>
 	  </div>
 	 </div>
 
 	 <div id="slide4" class="slide header">
 		 <h1>Por enquanto é isto</h1>
+		 <address>
+		    <p><a  href="mailto:isabelaisabelaps@gmail.com">
+		        isabelaisabelaps@gmail.com</a></p>
+	            <p>Hortolândia, São paulo.</p>
+		</address>
 	 </div>
    </body>
   </html>
