--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <html>
     <head>
 	  <title>Isabela Silva</title>
-	  <link rel="stylesheet" type="text/css" a href="Site2\MeuSite.css">
+	  <link rel="stylesheet" type="text/css" a href="Site2/MeuSite.css">
 	  <style>
 	   
     </style>
