--- a/index.html
+++ b/index.html
@@ -38,25 +38,25 @@
 	 <div id="slide3" class="slide">
 	  <div class="title">
              <table>
-		    <tr>
-			    <th>Algumas Informações</th>		
-            </tr>
-            <tr>
-			    <td>Nome: Isabela Silva.</td>
-			</tr>
-			<tr>
-				<td>Data de Nascimento:18/02/2005.</td>
-		    </tr>
-			<tr>
-				<td>Religião: Cristã </td>
-			</tr>
-			<tr>
-				<td>Minha comida favorita: hot dog.</td>
-			</tr>
-			<tr>
-				<td>Estou no primeiro ano do ensino Médio</td>
-            </tr>			
-	</table>
+	           <tr>
+		          <th>Algumas Informações</th>		
+                   </tr>
+                   <tr>
+			   <td>Nome:<i>Isabela Silva.</i></td>
+		   </tr>
+		   <tr>
+			   <td>Data de Nascimento:<i>18/02/2005.</i></td>
+		   </tr>
+		   <tr>
+			   <td>Religião:<i>Cristã</i></td>
+		   </tr>
+		   <tr>
+			   <td>Minha comida favorita:<i>hot dog.</i></td>
+		   </tr>
+		   <tr>
+			   <td>Estou no primeiro ano do ensino Médio</td>
+                  </tr>			
+	   </table>
 	  </div>
 	 </div>
 
