--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 		 <address>
 		    <p><a  href="mailto:isabelaisabelaps@gmail.com">
 		        isabelaisabelaps@gmail.com</a></p>
-	            <p>Hortolândia, São paulo.</p>
+	            <p>Hortolândia, São Paulo.</p>
 		</address>
 	 </div>
    </body>
